# benchmarking_representations

./: .gitignore  .pdm-python  .pre-commit-config.yaml  ADVANCED_INSTALLATION.md  Makefile  README.md  pyproject.toml  requirements.txt  requirements1.txt  requirements2.txt  requirements3.txt  ritvik_req.txt  setup.py
.github/actions/dependencies/: action.yml
.github/actions/pdm/: action.yml
.github/workflows/: test.yml
br/cellpack/: README.md  __init__.py  create_synthetic_data.py  generate_synthetic_data.py  get_reference_nuclear_shapes.py
br/chandrasekaran_et_al/: main.py  utils.py
br/configs/: blobby.yaml  cellpack.yaml  npm1_perturb.yaml  npm1_variance.yaml  pcna.yaml  punctate_instancenorm.yaml  variance_all_punctate.yaml
br/configs/hydra/: joblib.yaml
br/configs/results/: cellpack.yaml  npm1.yaml  npm1_perturb.yaml  other_polymorphic.yaml  other_punctate.yaml  pcna.yaml
br/data/: get_datamodules.py  utils.py
br/data/preprocessing/: image_sdfs.py  pc_sdfs.py  pcna.py  punctate_cyto.py  punctate_nuc.py
br/features/: archetype.py  classification.py  evolve.py  outlier_compactness.py  plot.py  reconstruction.py  regression.py  rotation_invariance.py  utils.py
br/models/: compute_features.py  load_models.py  predict_model.py  save_embeddings.py  train.py  utils.py
br/notebooks/: fig2_cellpack.ipynb  fig3_pcna.ipynb  fig4_other_punctate.ipynb  fig5_npm1_analysis.ipynb  fig6_other_polymorphic.ipynb  fig7_drugdata_analysis.ipynb  fig7_drugdata_cellprofiler.ipynb  visualize_pointclouds.ipynb  visualize_reconstructions.ipynb
br/notebooks/viz_pcna_pointclouds/: 1e9f6e89-61ab-4bda-a6db-5bbae0698bd1.npy
br/visualization/: mitsuba_render_image.py  mitsuba_render_pc.py
configs/data/cellpack/: image.yaml  pc.yaml  pc_jitter.yaml
configs/data/npm1/: classical_image_sdf.yaml  classical_image_seg.yaml  pc.yaml  so3_image_sdf.yaml  so3_image_seg.yaml
configs/data/npm1_64_res/: classical_image_sdf.yaml  classical_image_seg.yaml  pc.yaml  so3_image_sdf.yaml  so3_image_seg.yaml
configs/data/npm1_perturb/: classical_image_sdf.yaml  classical_image_seg.yaml  image_sdf.yaml  image_seg.yaml  pc.yaml  so3_image_sdf.yaml  so3_image_seg.yaml
configs/data/other_polymorphic/: classical_image_sdf.yaml  classical_image_seg.yaml  image_sdf.yaml  image_seg.yaml  pc.yaml  so3_image_sdf.yaml  so3_image_seg.yaml
configs/data/other_punctate/: image.yaml  pc.yaml  pc_intensity.yaml  pc_intensity_structurenorm.yaml
configs/data/pcna/: image.yaml  pc.yaml  pc_intensity.yaml  pc_intensity_jitter.yaml
configs/experiment/cellpack/: image_classical.yaml  image_so3.yaml  pc_classical.yaml  pc_so3.yaml
configs/experiment/npm1/: image_seg_so3.yaml  pc_implicit.yaml
configs/experiment/npm1_64_res/: image_sdf_classical.yaml  image_sdf_so3.yaml  image_seg_classical.yaml  image_seg_so3.yaml  pc_implicit.yaml
configs/experiment/npm1_perturb/: image_sdf_classical.yaml  image_sdf_so3.yaml  image_seg_classical.yaml  image_seg_so3.yaml  pc_implicit.yaml
configs/experiment/npm1_variance/: image_sdf_classical.yaml  image_sdf_so3.yaml  image_seg_classical.yaml  image_seg_so3.yaml  pc_implicit.yaml
configs/experiment/other_polymorphic/: image_sdf_classical.yaml  image_sdf_so3.yaml  image_seg_classical.yaml  image_seg_so3.yaml  pc_implicit.yaml
configs/experiment/other_punctate/: image_so3.yaml  image_so3_classical.yaml  pc_so3.yaml  (+1 more)
configs/results/: cellpack.yaml  npm1.yaml  npm1_64_res.yaml  npm1_perturb.yaml  other_polymorphic.yaml  other_punctate.yaml  pcna.yaml
data/processed/: cellpainting_evolve_image.csv  cellpainting_evolve_pc.csv
docs/: DEVELOPMENT.md  Makefile  PREPROCESSING.md  USAGE.md  conf.py  index.rst  make.bat
notebooks/: benchmarking_plot.ipynb  clustering_viz.ipynb  compute_metrics.ipynb
output_sdf_pc/: df.npy  pointcloud.npz  points.npz
pointcloudutils/: setup.py
src/: utils.py
src/br/data/preprocessing/image_preprocessing/: README.md  pyproject.toml
src/br/data/preprocessing/image_preprocessing/config/: config.yaml
src/br/data/preprocessing/image_preprocessing/config/report/: _base.yaml
src/br/data/preprocessing/image_preprocessing/image_preprocessing/steps/: __init__.py  merge.py  register.py
src/chandrasekaran_et_al/: utils.py
src/configs/: cellpack_pcna.yaml  npm1_variance.yaml  pcna_updated.yaml  punctate_structnorm.yaml
src/data/: get_datamodules.py  utils.py
src/features/: Chandrashekaran_et_al.py  archetype.py  cellpack_compute_corr.py  cellpack_compute_pilr.py  cellprofiler_utils.py  classification.py  cluster.py  diagnosticsheet.py  evolve.py  outlier_compactness.py  plot.py  reconstruction.py  regression.py  rotation_invariance.py  shapemodes.py  stereotypy.py  utils.py
src/models/: compute_features.py  load_models.py  predict_model.py  save_embeddings.py  utils.py
subpackages/image_preprocessing/: README.md  Snakefile  Snakefile_pcna  pyproject.toml  requirements.txt
subpackages/image_preprocessing/.snakemake/metadata/: L2FsbGVuL2FpY3MvbW9kZWxpbmcvcml0dmlrL3Byb2plY3RzL3RyYXNoL21lcmdlL21hbmlmZXN0LnBhcnF1ZXQ=  L2FsbGVuL2FpY3MvbW9kZWxpbmcvcml0dmlrL3Byb2plY3RzL3RyYXNoL2FsaWduL21hbmlmZXN0LnBhcnF1ZXQ=  L2FsbGVuL2FpY3MvbW9kZWxpbmcvcml0dmlrL3Byb2plY3RzL3RyYXNoL3Byb2Nlc3NlZC9tYW5pZmVzdC5wYXJxdWV0  L2FsbGVuL2FpY3MvbW9kZWxpbmcvcml0dmlrL3Byb2plY3RzL3RyYXNoL3JlZ2lzdGVyL21hbmlmZXN0LnBhcnF1ZXQ=
subpackages/image_preprocessing/config/: config.yaml
subpackages/image_preprocessing/config/step/: align_and_mask.yaml  merge.yaml  one_step.yaml  register.yaml
subpackages/image_preprocessing/config_pcna/: config.yaml
subpackages/image_preprocessing/config_pcna/step/: _base.yaml  align_and_mask.yaml  merge.yaml  register.yaml
subpackages/image_preprocessing/image_preprocessing/reports/: __init__.py  overview.py
subpackages/image_preprocessing/image_preprocessing/steps/: __init__.py  align_and_mask.py  combine_dfs.py  merge.py  one_step.py
subpackages/image_preprocessing/scripts/: run_step.py
subpackages/image_preprocessing/tests/: test_import_project.py
tests/: test_import_project.py  test_import_third_party_dependencies.py
(+282 files in other folders)
