[project]
name = "benchmarking_representations"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
authors = [
    { name = "Ritvik Vasan", email = "ritvik.vasan@alleninstitute.org" },
    {name = "", email = ""},
]
dependencies = [
    "torch-scatter>=2.1.2",
    "codecarbon>=2.4.2",
    "PyMCubes>=0.1.4",
    "copairs @ git+https://github.com/cytomining/copairs.git@880f22a551bd897896d148a0b07baa99d981c6a9",
    "pycytominer @ git+https://github.com/cytomining/pycytominer.git@36241269c4293c24484986568ca16b2d7eb9e808",
    "trimesh>=4.4.0",
    "pyvista>=0.43.8",
    "kaleido>=0.2.1,!=0.2.1.post1",  # kaleido 0.2.1.post1 is published incorrectly
    "pacmap>=0.7.2",
    "scipy==1.8.1", #pycytominer requires scipy < 1.9
    "mitsuba>=3.5.0",
    "seaborn>=0.13.2",
    "plotly>=5.22.0",
    "cyto-dl[equiv,pcloud,s3,spharm,torchserve] @ git+https://github.com/AllenCellModeling/cyto-dl.git@a4a061d1808e0f94f906933642920142b581ba38",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "pytorch-lightning",
    "pip", # This is needed for the loggers to work
    "monai-weekly",
    "pdm-pep517>=1.0.0",  # This is a build-time dependency of cyto-dl, required here because we instruct installation with --no-isolation
    "setuptools<74.0.0",  # New versions prevent numpy.distutils (now deprecated) from working, and py3nj installation depends on numpy.distutils
    "ipykernel>=6.29.5",
    "mesh-to-sdf==0.0.15",
    "pygame>=2.6.1",
    "PyOpenGL>=3.1.0",
    "PyOpenGL-accelerate>=3.1.7",
]
requires-python = "==3.10.*"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/AllenCell/benchmarking_representations"

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = ["br", "README.md", "LICENSE", "**/*.yaml" ]
excludes = ["**/*.pyc", "**/__pycache__"]

[tool.pdm.dev-dependencies]
dev = ["-e git+https://github.com/AllenCell/benchmarking_representations.git@3ec2a4437afccf0fa8a0f3e093771896993a17b2#egg=pointcloudutils&subdirectory=pointcloudutils"]
[tool.flake8]
ignore = [
    "E203",
    "E402",
    "W291",
    "W503",
]
max-line-length = 88

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
requirements = { shell = "pdm export --no-hashes | grep -v torch-scatter > requirements.txt" }
