[tool.pdm.build]
includes = ["image_preprocessing"]
excludes = ["**/*.pyc", "**/__pycache__"]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Nick Gomez", email = "nick.gomez@alleninstitute.org"},
    {name = "Guilherme Pires", email = "guilherme.pires@alleninstitute.org"},
    {name = "Ryan Spangler", email = "ryan.spangler@alleninstitute.org"},
    {name = "Ritvik Vasan", email = "ritvik.vasan@alleninstitute.org"},
    {name = "Theo Knijnenburg", email = "theo.knijnenburg@alleninstitute.org"},
]
requires-python = "==3.10.*"
dependencies = [
    "aicsimageio>=4.9.4",
    "numpy<2.0,>=1.18",
    "pandas<2.0,>=1.1",
    "universal-pathlib<1.0.0,>=0.0.18",
    "s3fs<2023.0.0,>=2022.3.0",
    "fsspec<2023.0.0,>=2022.3.0",
    "hydra-core<2.0.0.0,>=1.2.0.dev2",
    "snakemake<8.0.0,>=7.8.3",
    "scipy<2.0.0,>=1.8.1",
    "tqdm<5.0.0,>=4.64.0",
    "fastparquet<1.0.0,>=0.8.1",
    "plotly<6.0.0,>=5.9.0",
    "dash<3.0.0,>=2.5.1",
    "aicsshparam<1.0.0,>=0.1.1",
    "bfio==2.3.0",
    "zarr<3.0.0,>=2.12.0",
    "aiobotocore<3.0.0,>=2.3.4",
    "ome-zarr",
    "boto3==1.21.0",
    "multiprocessing-on-dill<4.0.0.0,>=3.5.0-alpha.4",
    "fire<1.0.0,>=0.4.0",
    "pulp==2.7.0",
    "pyshtools==4.10.4",
    "aicsimageio==4.9.4",
    "aicsshparam==0.1.10",
    "aiobotocore==2.3.4",
    "aiohttp==3.9.5",
    "aioitertools==0.11.0",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "appdirs==1.4.4",
    "asciitree==0.3.3",
    "astropy==6.1.0",
    "astropy-iers-data==0.2024.6.3.0.31.14",
    "asttokens==2.4.1",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "blinker==1.8.2",
    "botocore==1.24.21",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "configargparse==1.7",
    "connection-pool==0.0.3",
    "contourpy==1.2.1",
    "cramjam==2.8.3",
    "cycler==0.12.1",
    "dash==2.17.0",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "dask==2024.5.2",
    "datrie==0.8.2",
    "decorator==5.1.1",
    "dill==0.3.8",
    "distributed==2024.5.2",
    "docutils==0.21.2",
    "dpath==2.1.6",
    "elementpath==4.4.0",
    "exceptiongroup==1.2.1",
    "executing==2.0.1",
    "fasteners==0.19",
    "fastjsonschema==2.19.1",
    "fastparquet==0.8.3",
    "fire==0.4.0",
    "flask==3.0.3",
    "fonttools==4.53.0",
    "frozenlist==1.4.1",
    "fsspec==2022.7.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "humanfriendly==10.0",
    "hydra-core==1.3.2",
    "idna==3.7",
    "image-preprocessing==0.0.1",
    "imagecodecs==2024.6.1",
    "imageio==2.34.1",
    "importlib-metadata==7.1.0",
    "ipdb==0.13.13",
    "ipython==8.25.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jmespath==0.10.0",
    "joblib==1.4.2",
    "jsonschema==4.22.0",
    "jsonschema-specifications==2023.12.1",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.5",
    "lazy-loader==0.4",
    "locket==1.0.0",
    "lxml==4.9.4",
    "markupsafe==2.1.5",
    "matplotlib==3.9.0",
    "matplotlib-inline==0.1.7",
    "msgpack==1.0.8",
    "multidict==6.0.5",
    "multiprocessing-on-dill==3.5.0a4",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.3",
    "numcodecs==0.12.1",
    "numpy==1.26.4",
    "ome-types==0.5.1.post1",
    "omegaconf==2.3.0",
    "packaging==24.0",
    "pandas==1.5.3",
    "parso==0.8.4",
    "partd==1.4.2",
    "pexpect==4.9.0",
    "pillow==10.3.0",
    "plac==1.4.3",
    "platformdirs==4.2.2",
    "plotly==5.22.0",
    "pooch==1.8.2",
    "prompt-toolkit==3.0.46",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pydantic==2.7.3",
    "pydantic-compat==0.1.2",
    "pydantic-core==2.18.4",
    "pyerfa==2.0.1.4",
    "pygments==2.18.0",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "referencing==0.35.1",
    "requests==2.32.3",
    "reretry==0.11.8",
    "resource-backed-dask-array==0.1.0",
    "retrying==1.3.4",
    "rpds-py==0.18.1",
    "s3fs==2022.7.1",
    "s3transfer==0.5.2",
    "scikit-image==0.23.2",
    "scikit-learn==1.5.0",
    "scipy==1.13.1",
    "six==1.16.0",
    "smart-open==7.0.4",
    "smmap==5.0.1",
    "snakemake==7.32.4",
    "sortedcontainers==2.4.0",
    "stopit==1.1.2",
    "tabulate==0.9.0",
    "tblib==3.0.0",
    "tenacity==8.3.0",
    "termcolor==2.4.0",
    "threadpoolctl==3.5.0",
    "throttler==1.2.2",
    "tifffile==2024.5.22",
    "tomli==2.0.1",
    "toolz==0.12.1",
    "toposort==1.10",
    "tornado==6.4.1",
    "tqdm==4.66.4",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "universal-pathlib==0.0.18",
    "urllib3==1.26.18",
    "vtk==9.3.0",
    "wcwidth==0.2.13",
    "werkzeug==3.0.3",
    "wrapt==1.16.0",
    "xarray==2024.3.0",
    "xmlschema==3.3.1",
    "xsdata==24.3.1",
    "yarl==1.9.4",
    "yte==1.5.4",
    "zarr==2.18.2",
    "zict==3.0.0",
    "zipp==3.19.2",
]
name = "image_preprocessing"
version = "0.0.1"
description = "A snakemake workflow to preprocess a 3D single cell image dataset"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
# The name "post_lock" is special: this command will run automatically after any invocation of `pdm lock`
post_lock = { shell = "pdm export --no-hashes -o requirements.txt" }
